--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,16 @@
 {
     "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "start": "next start",
+        "build": "next build"
+    },
     "dependencies": {
+        "@apst/tsconfig": "^0.1.3",
         "next": "^16.0.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
+        "socket.io-client": "^4.8.1",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
