Add styling solution

--- a/biome.json
+++ b/biome.json
@@ -7,5 +7,10 @@
         "includes": [
             "!client/.openapi/**/*"
         ]
+    },
+    "css": {
+        "parser": {
+            "tailwindDirectives": true
+        }
     }
 }
