--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,18 @@
     },
     "dependencies": {
         "@apst/tsconfig": "^0.1.3",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@tailwindcss/postcss": "^4.1.17",
+        "class-variance-authority": "~0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "~0.554.0",
         "next": "^16.0.3",
+        "postcss": "^8.5.6",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "socket.io-client": "^4.8.1",
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss": "^4.1.17",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
@@ -20,6 +28,9 @@
         "@types/react": "~19.2.0",
         "@types/react-dom": "~19.2.0",
         "babel-plugin-react-compiler": "^1.0.0",
-        "sharp": "~0.34.5"
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-preset-env": "^10.4.0",
+        "sharp": "~0.34.5",
+        "tw-animate-css": "^1.4.0"
     }
 }
